--- a/src/docs/asciidoc/api.adoc
+++ b/src/docs/asciidoc/api.adoc
@@ -10,6 +10,18 @@ endif::[]
 :toclevels: 4
 :sectlinks:
 
+## AUTH
+
+=== silent-refresh (토큰 재발급)
+
+==== REQUEST
+
+include::{snippets}/auth/silent-refresh/http-request.adoc[]
+
+==== RESPONSE
+
+include::{snippets}/auth/silent-refresh/http-response.adoc[]
+
 ## User
 
 === User signup (기본 회원가입)
@@ -19,6 +31,7 @@ endif::[]
 include::{snippets}/user/signup/http-request.adoc[]
 
 ==== RESPONSE
+
 include::{snippets}/user/signup/http-response.adoc[]
 
 === User logout (로그아웃)
@@ -28,4 +41,5 @@ include::{snippets}/user/signup/http-response.adoc[]
 include::{snippets}/user/logout/http-request.adoc[]
 
 ==== RESPONSE
+
 include::{snippets}/user/logout/http-response.adoc[]
