--- a/src/docs/asciidoc/api.adoc
+++ b/src/docs/asciidoc/api.adoc
@@ -24,29 +24,19 @@ include::{snippets}/auth/silent-refresh/http-response.adoc[]
 
 ## User
 
-=== User signup (기본 회원가입)
+=== User signup (회원가입)
 
 ==== REQUEST
 
-include::{snippets}/user/signup/http-request.adoc[]
+include::{snippets}/user/signup/httpie-request.adoc[]
+
+include::{snippets}/user/signup/request-parameters.adoc[]
+
+include::{snippets}/user/signup/request-parts.adoc[]
 
 ==== RESPONSE
 
 include::{snippets}/user/signup/http-response.adoc[]
-
-=== User additional-signup (추가 회원가입)
-
-==== REQUEST
-
-include::{snippets}/user/additional-signup/httpie-request.adoc[]
-
-include::{snippets}/user/additional-signup/request-parameters.adoc[]
-
-include::{snippets}/user/additional-signup/request-parts.adoc[]
-
-==== RESPONSE
-
-include::{snippets}/user/additional-signup/http-response.adoc[]
 
 === User logout (로그아웃)
 
