--- a/src/docs/asciidoc/api.adoc
+++ b/src/docs/asciidoc/api.adoc
@@ -24,6 +24,26 @@ include::{snippets}/auth/silent-refresh/http-response.adoc[]
 
 ## User
 
+=== check-nickname (닉네임 중복체크 - 사용 가능)
+
+==== REQUEST
+
+include::{snippets}/user/check-nickname-success/httpie-request.adoc[]
+
+==== RESPONSE
+
+include::{snippets}/user/check-nickname-success/http-response.adoc[]
+
+=== check-nickname (닉네임 중복체크 - 사용 불가능)
+
+==== REQUEST
+
+include::{snippets}/user/check-nickname-fail/httpie-request.adoc[]
+
+==== RESPONSE
+
+include::{snippets}/user/check-nickname-fail/http-response.adoc[]
+
 === User signup (회원가입)
 
 ==== REQUEST
