--- a/src/docs/asciidoc/api.adoc
+++ b/src/docs/asciidoc/api.adoc
@@ -88,6 +88,20 @@ include::{snippets}/user/re-signup/http-request.adoc[]
 
 include::{snippets}/user/re-signup/http-response.adoc[]
 
+=== User re-signup (재 회원가입)
+
+==== REQUEST
+
+include::{snippets}/user/re-signup(post)/httpie-request.adoc[]
+
+include::{snippets}/user/re-signup(post)/request-parameters.adoc[]
+
+include::{snippets}/user/re-signup(post)/request-parts.adoc[]
+
+==== RESPONSE
+
+include::{snippets}/user/re-signup(post)/http-response.adoc[]
+
 ## Admin
 
 //=== home (관리자 홈)
